# temperature-sensor

./: .clang-format  .envrc.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  sensor_data.csv  sensor_data_logger.py
main/: CMakeLists.txt  dht11.c  dht11.h  main.c
